// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ListGroupItem with children 1`] = `
<li
  className="sc-jqUVSM eSBrHl"
  onClick={[Function]}
>
  <a
    className="sc-kDDrLX bFWLLJ"
  >
    <span
      className="sc-iqcoie lftmcC"
    >
      <svg
        fill="none"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
          fill="black"
          fillRule="evenodd"
        />
        <mask
          height="18"
          id="mask0_277_1709"
          maskUnits="userSpaceOnUse"
          width="20"
          x="0"
          y="1"
        >
          <path
            clipRule="evenodd"
            d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_277_1709)"
        >
          <path
            clipRule="evenodd"
            d="M0 0H20V20H0V0Z"
            fill="#72767b"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </span>
    <span
      className="sc-crXcEl hxLnNX"
    >
      Item 1
    </span>
    <span
      className="sc-iqcoie lftmcC"
    >
      <svg
        fill="none"
        height={20}
        stroke="#979797"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
       
    </span>
  </a>
</li>
`;

exports[`renders ListGroupItem with href 1`] = `
<li
  className="sc-jqUVSM eSBrHl"
  onClick={[Function]}
>
  <a
    className="sc-kDDrLX bFWLLJ"
    href="http://localhost:8080"
  >
    <span
      className="sc-iqcoie lftmcC"
    >
      <svg
        fill="none"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
          fill="black"
          fillRule="evenodd"
        />
        <mask
          height="18"
          id="mask0_277_1709"
          maskUnits="userSpaceOnUse"
          width="20"
          x="0"
          y="1"
        >
          <path
            clipRule="evenodd"
            d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_277_1709)"
        >
          <path
            clipRule="evenodd"
            d="M0 0H20V20H0V0Z"
            fill="#72767b"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </span>
    <span
      className="sc-crXcEl hxLnNX"
    >
      Item 1
    </span>
    <span
      className="sc-iqcoie lftmcC"
    >
      <svg
        fill="none"
        height={20}
        stroke="#979797"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
       
    </span>
  </a>
</li>
`;

exports[`renders ListGroupItem withour children 1`] = `
<li
  className="sc-jqUVSM eSBrHl"
  onClick={[Function]}
>
  <a
    className="sc-kDDrLX bFWLLJ"
  >
    <span
      className="sc-iqcoie lftmcC"
    >
      <svg
        fill="none"
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
          fill="black"
          fillRule="evenodd"
        />
        <mask
          height="18"
          id="mask0_277_1709"
          maskUnits="userSpaceOnUse"
          width="20"
          x="0"
          y="1"
        >
          <path
            clipRule="evenodd"
            d="M1.875 1.25H18.125C19.1602 1.25 20 2.08984 20 3.125V16.875C20 17.9102 19.1602 18.75 18.125 18.75H1.875C0.839844 18.75 0 17.9102 0 16.875V3.125C0 2.08984 0.839844 1.25 1.875 1.25ZM17.8906 16.875C18.0195 16.875 18.125 16.7695 18.125 16.6406V7.5H1.875V16.6406C1.875 16.7695 1.98047 16.875 2.10938 16.875H17.8906Z"
            fill="white"
            fillRule="evenodd"
          />
        </mask>
        <g
          mask="url(#mask0_277_1709)"
        >
          <path
            clipRule="evenodd"
            d="M0 0H20V20H0V0Z"
            fill="#72767b"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </span>
    <span
      className="sc-crXcEl hxLnNX"
    >
      Item 1
    </span>
  </a>
</li>
`;
